@@ -1,5 +1,5 @@
 #
-# $Id: defaults.tcl,v 1.8 2008/11/01 15:34:24 patthoyts Exp $
+# $Id: defaults.tcl,v 1.9 2008/11/29 00:43:48 patthoyts Exp $
 #
 # Settings for default theme.
 #
@@ -98,6 +98,13 @@ namespace eval ttk::theme::default {
 	ttk::style map Treeview \
 	    -background [list selected $colors(-selectbg)] \
 	    -foreground [list selected $colors(-selectfg)] ;
+
+	# Combobox popdown frame
+	ttk::style layout ComboboxPopdownFrame {
+	    ComboboxPopdownFrame.border -sticky nswe
+	}
+ 	ttk::style configure ComboboxPopdownFrame \
+	    -borderwidth 1 -relief solid
 
 	#
 	# Toolbar buttons:
